--- a/clientsrc/package.json
+++ b/clientsrc/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.6.0",
     "sass": "^1.36.0",
     "sass-loader": "^8.0.2",
+    "sweetalert": "^2.1.2",
     "vue": "^2.6.14",
     "vue-router": "^3.5.2",
     "vuex": "^3.6.2"
