--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "helmet": "^3.23.3",
+    "moment": "^2.29.1",
     "mongoose": "^5.13.3",
     "socket.io": "^2.4.1"
   },
