--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "helmet": "^3.23.3",
     "moment": "^2.29.1",
     "mongoose": "^5.13.3",
+    "pokersolver": "^2.1.4",
     "socket.io": "^2.4.1"
   },
   "engines": {
